@@ -2,6 +2,7 @@
 v5.0.0-git
 ----------
 
+[jan] Add API to backup and restore user data.
 [jan] Show photos when displaying contacts in calendars.
 [jan] Add CLI script to search for invalid email addresses.
 [mjr] Remove Facebook driver.
